# moto-fastapi-webapp

./: .mock.s3  README.md  pyproject.toml
src/: app.py  s3_utils.py
src/html-j2/: body.css.j2
src/html-j2/browser/: head.html.j2  index.html.j2
src/html-j2/buckets/: head.html.j2  index.html.j2
