[tool.poetry]
name = "moto-fastapi-webapp"
version = "0.1.0"
description = ""
authors = ["dsillman2000 <dsillman2000@yahoo.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
jinja2 = "^3.1.3"
boto3 = "^1.34.79"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[tool.poetry.group.dev.dependencies]
moto = "^5.0.5"
mypy-boto3-s3 = "^1.34.65"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
